--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
 	</div>
 	{% include "partials/footer.html" %}
 
-	<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+	<script src="particles.min.js"></script>
 	<script>
 		particlesJS.load('particles', '{{ config.base_url | safe }}/particles.json', null);
 	</script>
