--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
 
 	<script src="particles.min.js"></script>
 	<script>
-		particlesJS.load('particles', '{{ config.base_url | safe }}/particles.json', null);
+		particlesJS.load('particles', '{{ config.base_url | safe }}particles.json', null);
 	</script>
 
 </body>
